--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "djangocourse", from = "src"}]
 
+[tool.poetry.group.dev.dependencies]
+django-debug-toolbar = "^5.2.0"
+
 [tool.djlint]
 ignore = "H030,H031"
 
