--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,12 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "django (>=5.2.4,<6.0.0)"
+    "django (>=5.2.4,<6.0.0)",
+    "psycopg2-binary>=2.9.0",
+    "whitenoise>=6.5.0",
+    "gunicorn>=21.2.0",
+    "dj-database-url>=2.1.0",
+    "python-dotenv (>=1.1.1,<2.0.0)"
 ]
 
 [tool.poetry]
