--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "whitenoise>=6.5.0",
     "gunicorn>=21.2.0",
     "dj-database-url>=2.1.0",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "django-allauth[socialaccount] (>=65.10.0,<66.0.0)"
 ]
 
 [tool.poetry]
