--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
 asgiref==3.9.1 ; python_version >= "3.13"
+certifi==2025.7.14 ; python_version >= "3.13"
+cffi==1.17.1 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
+charset-normalizer==3.4.2 ; python_version >= "3.13"
+cryptography==45.0.5 ; python_version >= "3.13"
 dj-database-url==3.0.1 ; python_version >= "3.13"
+django-allauth==65.10.0 ; python_version >= "3.13"
 django==5.2.4 ; python_version >= "3.13"
 gunicorn==23.0.0 ; python_version >= "3.13"
+idna==3.10 ; python_version >= "3.13"
+oauthlib==3.3.1 ; python_version >= "3.13"
 packaging==25.0 ; python_version >= "3.13"
 psycopg2-binary==2.9.10 ; python_version >= "3.13"
+pycparser==2.22 ; python_version >= "3.13" and platform_python_implementation != "PyPy"
+pyjwt==2.10.1 ; python_version >= "3.13"
 python-dotenv==1.1.1 ; python_version >= "3.13"
+requests==2.32.4 ; python_version >= "3.13"
 sqlparse==0.5.3 ; python_version >= "3.13"
 tzdata==2025.2 ; python_version >= "3.13" and sys_platform == "win32"
+urllib3==2.5.0 ; python_version >= "3.13"
 whitenoise==6.9.0 ; python_version >= "3.13"
